bluec-tests/tests/valid/types_float/simple.c
/* A simple arithmetic test case */
int main(void) {
    float x = 2.0f;
    return (x * 2.0f == 4.0f);
}