bluec-tests/tests/invalid/types_longdouble/bitwise_shift_longdouble_2.c
int main(void) {
    /* It's illegal to use a float as the right operand of << or >>. */
    return 1 << 2.0L;
}